<resources>
    <!-- General Strings -->
    <string name="app_name">TheMoviesApp</string>
    <string name="database_name">TheMoviesApp-db</string>
    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="image_url">https://image.tmdb.org/t/p/w185</string>

    <!-- Login Screen Strings -->
    <string name="login_image_description">Login Image</string>
    <string name="login_title_text">TheMoviesApp | Login</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_password_text_visibility_description">Password Icon Visibility</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_text">Do not have an account? Register here!</string>

    <!-- Register Screen Strings -->
    <string name="register_image_description">Register Image</string>
    <string name="register_title_text">TheMoviesApp | Register</string>
    <string name="register_user_name_label">User Name</string>
    <string name="register_first_name_label">First Name</string>
    <string name="register_last_name_label">Last Name</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="register_error_field_description">error</string>
    <string name="register_password_hide">Hide Password</string>
    <string name="register_password_show">Show Password</string>

    <!-- Home Screen Strings -->
    <string name="home_items_content_type">movie</string>

    <!-- Detail Screen Strings -->
    <string name="detail_title">Title</string>
    <string name="detail_overview">Overview</string>
    <string name="detail_favourite_not_favourite">Favourite / Not Favourite?</string>
    <string name="detail_favourite">Favourite</string>
    <string name="detail_not_favourite">Not Favourite</string>

    <!-- Test Tags Strings -->
    <string name="login_email_test">emailLogin</string>
    <string name="login_password_test">passwordLogin</string>
    <string name="login_login_test">loginLogin</string>
    <string name="login_register_test">registerLogin</string>
    <string name="register_user_name_test">userNameRegister</string>
    <string name="register_first_name_test">firstNameRegister</string>
    <string name="register_last_name_test">lastNameRegister</string>
    <string name="register_email_test">emailRegister</string>
    <string name="register_password_test">passwordRegister</string>
    <string name="register_register_test">registerRegister</string>
    <string name="register_example_user_name_test">userNameTest</string>
    <string name="register_example_first_name_test">firstNameTest</string>
    <string name="register_example_last_name_test">lastNameTest</string>
    <string name="register_example_email_init_test">emailTest</string>
    <string name="register_example_email_end_test">test.com</string>
    <string name="register_example_password_test">passwordTest</string>
    <string name="home_loading_spinner_text">loading_spinner</string>
    <string name="home_movie_list_test">movieListHome</string>
    <string name="home_movie_image_test">movieImageHome</string>
    <string name="home_movie_favourite_test">movieFavouriteHome</string>
    <string name="home_movie_title_test">movieTitleHome</string>
    <string name="detail_movie_image_test">movieImageDetail</string>
    <string name="detail_movie_title_test">movieTitleDetail</string>
    <string name="detail_movie_overview_test">movieOverviewDetail</string>
    <string name="detail_movie_favourite_test">movieFavouriteDetail</string>
    <string name="snack_bar_host_test">snackBarHost</string>
    <string name="combined_loading_idling_resource">combinedLoadingIdlingResource</string>

    <!-- Test Info Strings -->
    <string name="assume_internet_test">Test Skipped: A network/interface error was detected in Home</string>
    <string name="error_movie_list_test">Critical Fail: The Home list loaded, but no movie was found with the tag movie_</string>
    <string name="description_matcher_movie_test">Nodes starting with the movie tag prefix</string>

    <!-- TopAppBar Strings -->
    <string name="profile_default_image_description">Default Profile Picture</string>
    <string name="anonymous_username_text">Welcome</string>
    <string name="anonymous_title_movie_text">Unknown</string>
    <string name="origin_from_home">home</string>
    <string name="origin_from_other">other</string>

    <!-- Common Buttons Strings -->
    <string name="accept_button_dialog">Accept</string>
    <string name="cancel_button_dialog">Cancel</string>
    <string name="register_button">Register</string>
    <string name="cancel_button">Cancel</string>

    <!-- Logout Dialog Strings -->
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure to logout?</string>

    <!-- Info Messages Strings -->
    <string name="info_register_success">Info: User created successfully</string>

    <!-- Error Messages Strings -->
    <string name="error_login_incorrect">Error: Email/Password not valid</string>
    <string name="error_register">Error: Creating the user</string>
    <string name="error_field_not_empty">Error: The field cannot be empty</string>
    <string name="error_username_exists">Error: The UserName already exists</string>
    <string name="error_email_exists">Error: The Email already exists</string>
    <string name="error_password_length">Error: The Password must have at least 8 characters</string>
    <string name="error_internet">There is no Internet connection</string>
    <string name="error_database">There is a problem with the database</string>
    <string name="error_unknown">Unknown error</string>

    <!-- Float Values -->
    <string name="bias_small">0f</string>
    <string name="bias_medium">0.6f</string>
    <string name="line_weight">1f</string>

    <!-- Others Strings -->
    <string name="arrow_back_content_description">Arrow back</string>
    <string name="color_background_login">#E0E0E0</string>
    <string name="color_text_fields">#5E5E5E</string>
    <string name="color_text_register_now">#4D4D4D</string>
    <string name="max_lines">1</string>
</resources>